--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script> 
 
+
+    <!--Bootstrap 5-->
+   
 </head>
 <body>
 
@@ -29,7 +32,7 @@
 
 <!-- First Container-->
 
-
+<!--
 <nav class="navbar">
     
     <div id="mySidenav" class="sidenav">
@@ -59,13 +62,44 @@
                 <span style="font-size:30px;cursor:pointer" onclick="openNav()" >&#9776;</span>
             </a>
         </div> 
-
-
-
-
-
 </nav>       
-             
+-->
+
+
+
+
+<nav class="navbar navbar-expand-md navbar-light bg-white text-dark fixed-top ">
+    <a class="navbar-brand" href="#">
+        <img src="images/logo.png" alt="Logo" style="width:55px;">
+    </a>
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon text-dark"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav mr-auto w-100 justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#service">SERVICE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#career">CAREER</a>
+        </li>    
+        <li class="nav-item">
+            <a class="nav-link" href="#contact">CONTACT</a>
+          </li>  
+      </ul>
+    </div>  
+  </nav>
+
+
+
+
+
+
+
+
 
 
 <div class="container-fluid p-4" id="particles">
