--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <!-- First Container-->
 
-<nav class="navbar navbar-expand-md navbar-expand-xl navbar-light bg-white text-dark fixed-top overflow-hidden">
-    <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-md navbar-expand-xl navbar-light bg-white text-dark fixed-top overflow-hidden" id="head">
+    <a class="navbar-brand" href="#head">
         <img src="images/logo.png" alt="Logo" style="width:55px;">
     </a>
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -244,7 +244,7 @@
         <div class="col-lg-2 col-xl-1"></div>
 
         <div class="col-lg-6 col-xl-7 border-bottom border-top-0 border-dark border-right-0 border-left-0">
-            <h2 class="lang" key="st31">Armenia, Yerevan, Adonc 17/1</h2>
+            <h3 class="lang" key="st31">Armenia, Yerevan, Adonc 17/1</h3>
 
             <div class="d-flex mb-0 justify-content-end">
                 <div class="">
@@ -255,7 +255,30 @@
         <div class="col-xl-2"></div>
     </div>
 
+
     <div class="row p-4">
+
+      <div class="col-lg-4 col-xl-2"></div>
+
+      <div class="col-lg-2 col-xl-1"></div>
+
+      <div class="col-lg-6 col-xl-7 border-bottom border-top-0 border-dark border-right-0 border-left-0">
+          <h3 class="lang" key="st33">Tel: + 374 55 29 11 19</h3>
+
+          <div class="d-flex mb-0 justify-content-end">
+              <div class="">
+                  <a href="#" class="text-body text-decoration-none">office@dpl.am</a>
+                  </div>                              
+            </div>
+      </div>
+      <div class="col-xl-2"></div>
+  </div>
+
+
+
+
+
+   <!--  <div class="row p-4">
         <div class="col-lg-6 col-xl-1">
             
         </div>
@@ -271,7 +294,7 @@
                         <a href="#" class="text-body text-decoration-none">office@dpl.am</a>
                         
                     </div>
-                    <!-- <div class="col-lg-4 col-12">                    
+                    <div class="col-lg-4 col-12">                    
 
                         <div class="d-flex flex-column text-right">
                             <div class="">
@@ -284,12 +307,12 @@
                                 <a href="#" class="text-body text-decoration-none"> linkedin</a>
                             </div>
                         </div>
-                    </div> -->
+                    </div> 
                 </div>           
         </div>
         <div class="col-xl-2"></div>
 
-    </div>
+    </div> -->
 
 
     <div class="row p-4">
