--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-md navbar-expand-xl navbar-light bg-white text-dark fixed-top overflow-hidden" id="head">
     <a class="navbar-brand" href="#">
         <!-- <img src="images/logo.png" alt="Logo" style="width:55px;"> -->
-        <span style="color:black; background-color: red;" class="lang" key="shapka">DEEP</span>
+        <span class="lang" key="shapka">DEEP</span>
     </a>
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon text-dark"></span>
@@ -78,7 +78,7 @@
     <div id="webcoderskull">
         
         <div class="d-flex justify-content-center" id="title">
-            <h1 class="hh"><span style="color:black; background-color: red;" class="lang" key="shapka">DEEP</span> <span class="lang" key="golovka"> SCTRUCTURED LEGAL SERVICES</span></h1>          
+            <h1 class="hh"><span style="color:black; background-color:  #ff1a1a;" class="lang" key="shapka">DEEP</span> <span class="lang" key="golovka"> STRUCTURED LEGAL SERVICES</span></h1>          
         </div>        
         
         </div> 
@@ -110,7 +110,10 @@
             <p class="lang" key="st3">We have more than ten years of professional experience both in public and private sectors. Our lawyers successfully represented one of the largest D2C platforms 
              in CIS region, helping them to expend their market and profit.</p>
             <p class="lang" key="st4">Nowadays, we operate in Armenia and Russia. Moreover, we constantly enlarge our network for the sake of our clients.</p>
-            <p class="lang" key="st5">Partners of the firm: Levon Sargsyan</p> 
+            <div class="d-flex flex-row justify-content-start">
+              <p class="lang" key="st5">Partners of the firm:Levon Sargsyan</p>
+              <p><a href='#'><i class='fa fa-linkedin-square'></i></a></p>
+            </div>
             <p class="lang" key="st6">Lawyers of the firm:</p> 
             <hr>
         </div>
@@ -324,7 +327,7 @@
 
             <div class="row text-justify">
                 <div class="col-lg-4">
-                    <a href="#" class="text-body text-decoration-none lang" disabled key="st36">DLP, 2022</a>
+                    <a href="#" class="text-body text-decoration-none lang" disabled key="st36">DEEP, 2022</a>
                 </div>
                 <div class="col-lg-4">
                     <a href="#" class="text-body text-decoration-none lang" key="st34">Privacy Policy</a>
