--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
              in CIS region, helping them to expend their market and profit.</p>
             <p class="lang" key="st4">Nowadays, we operate in Armenia and Russia. Moreover, we constantly enlarge our network for the sake of our clients.</p>
             <div class="d-flex flex-row justify-content-start">
-              <p class="lang" key="st5">Partners of the firm:Levon Sargsyan</p>
-              <p><a href='#'><i class='fa fa-linkedin-square'></i></a></p>
+              <p class="lang" key="st5">Partners of the firm: Levon Sargsyan</p>
+              <p><a href='https://www.linkedin.com/in/levon-sargsyan'><i class='fa fa-linkedin-square'></i></a></p>
             </div>
             <p class="lang" key="st6">Lawyers of the firm:</p> 
             <hr>
