--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <a href="#" class="text-body text-decoration-none lang" key="st34">Privacy Policy</a>
                 </div>
                 <div class="col-lg-4 text-right">
-                    <a href="https://rusgtx.github.io/contact" class="text-body text-decoration-none lang" key="st35">Site made by R&M</a>
+                    <a href="https://rusgtx.github.io/contact/" class="text-body text-decoration-none lang" key="st35">Site made by R&M</a>
                 </div>
             </div>  
         </div> 
