--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
 
 
                   <div class="row border">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <h6>Business Operation</h6>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <div class="row border border-top-0 border-bottom-0 border-right-0">
                         <div class="col-lg-12">
                          <p>Registration</p> 
@@ -297,22 +297,22 @@
                   </div>
 
                   <div class="row border border-top-0 border-bottom-0">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
                       <h6>Data Protection</h6>
                     </div>
                   </div>
 
                   <div class="row border border-bottom-0">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
                       <h6>Intellectual Property Protection</h6>
                     </div>
                   </div>
 
                   <div class="row border border-bottom-0">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <h6>Legal Document Preparation and Management</h6>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <div class="row border border-top-0 border-right-0 border-bottom-0">
                         <div class="col-lg-12">
                          <p>Statutory Compliance</p> 
@@ -327,10 +327,10 @@
                   </div>
 
                   <div class="row border border-bottom-0">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <h6>Legal Support and Consultation</h6>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
                       <div class="row border border-top-0 border-right-0">
                         <div class="col-lg-12">
                          <p>Legal Support of IT Projects</p> 
@@ -355,10 +355,10 @@
                   </div>
                   
                   <div class="row border">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                       <h6>Representation</h6>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
                       <div class="row border border-top-0 border-right-0">
                         <div class="col-lg-12">
                          <p>Antitrust Cases</p> 
