--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet"> 
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
      <!-- Latest compiled and minified CSS -->
 
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -345,7 +350,7 @@
     <div class="row ">
       <div class="col-lg-2 col-xl-3 col-md-1 col-1"></div>
       <div class="col-lg-8 col-xl-8 col-md-10 col-10 text-justify">         
-        <p class="lang" key="st43">Phone number: +37493511511 / +374 55 29 11 19 &nbsp;&nbsp;&nbsp; office@dpl.am</p>                      
+        <p class="lang" key="st43">Phone number: +374 93 51 15 11 / +374 55 29 11 19 &nbsp;&nbsp;&nbsp; office@dpl.am</p>                      
           
       </div>
       <div class="col-lg-2 col-xl-1 col-md-1 col-1"></div>
