--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h1 class="lang" key="shapka2">We solve comprehensive legal tasks.</h1> 
 
             <p class="lang" key="st1">We serve companies and individuals to pursue strategic and fiscal objectives with confidence.
-              Our provides advice on any legal matter that your business may face. In achieving these objectives,
+              Our firm provides advice on any legal matter that your business may face. In achieving these objectives,
                we analyze and follow up on the commercial realities that drive the need to ensure the businesses’ compliance with the legal framework. </p>           
             <p class="lang" key="st2">
               The firm was founded in 2020, with a primary objective of to delivering exceptional legal services to the high-tech industry,
@@ -299,7 +299,7 @@
           
           <div class="d-flex flex-column justify-content-center">
               <p class="lang" key="st38">Notwithstanding that currently we do not have published vacancies, please feel free to reach out to us.
-                 You may e-mail your CV and a cover letter, alongside your motivation, experience (not mandatory) and areas of interest to: career@dlp.am
+                 You may e-mail your CV and a cover letter, alongside your motivation, experience (not mandatory) and areas of interest to: career@dpl.am
                 </p>
                                
             </div>  
