--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">  
-    
+
      <!-- Latest compiled and minified CSS -->
 
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -50,7 +50,7 @@
           <a class="nav-link lang" key="about" href="#about">ABOUT US</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link lang" key="service" href="#service">SERVICES</a>
+          <a class="nav-link lang" key="services" href="#services">SERVICES</a>
         </li>
         <li class="nav-item">
           <a class="nav-link lang" key="career" href="#career">CAREER</a>
