--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 <!--SERVICE-->
 
-<div class="container-fluid" id="service">
+<div class="container-fluid" id="services">
     <div><h3 class="small-header lang" key="services">SERVICES</h3></div>
     
     <div class="row move">
